force-app/main/default/objects/OpportunityLineItem/fields/Bundle_Group__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Group__c</fullName>
    <description>Unique identifier shared between bundle and option lines.</description>
    <inlineHelpText>Unique identifier shared between bundle and option lines.</inlineHelpText>
    <label>Bundle Group</label>
    <length>18</length>
    <type>Text</type>
</CustomField>