force-app/main/default/objects/OpportunityLineItem/fields/Daily_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Rate__c</fullName>
    <description>Snapshot of the per-day catalog price at save time for rental lines. Standard UnitPrice on this record is the period-prorated price (Daily_Rate × Rental_Days). This field preserves the raw daily rate for reporting.</description>
    <inlineHelpText>Per-day list price snapshot. UnitPrice represents the prorated full-period unit price.</inlineHelpText>
    <label>Daily Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>