force-app/main/default/objects/OpportunityLineItem/fields/Is_Bundle_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Bundle_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox indicating whether this line is the bundle product or an option line.</description>
    <inlineHelpText>Checkbox indicating whether this line is the bundle product or an option line.</inlineHelpText>
    <label>Is Bundle Product</label>
    <type>Checkbox</type>
</CustomField>