force-app/main/default/objects/OpportunityLineItem/fields/Pickup_Date__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Date__c</fullName>
    <description>The scheduled transport date for picking up (returning) this equipment from the site. When populated, the trip engine creates or consolidates a Pickup Trip (Direction__c = &quot;Pickup&quot;) grouping all line items sharing the same departure agency and date. This is a transport return date, not a billing date.</description>
    <inlineHelpText>Enter the date when this equipment must be picked up (returned) from the site. A pickup trip will be automatically created or updated. Leave blank if no return transport is needed for this line item.</inlineHelpText>
    <label>Pickup Date</label>
    <type>Date</type>
</CustomField>