force-app/main/default/objects/OpportunityLineItem/fields/Rental_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Rental_End_Date__c</fullName>
    <description>End date of the rental billing period for this line item. Used exclusively for invoicing and duration calculation. Has no effect on transport trip creation or cost calculation.</description>
    <inlineHelpText>End date of the rental period for billing purposes. This does not affect transport scheduling. Typically the day before the equipment is picked up from the site.</inlineHelpText>
    <label>Rental End Date</label>
    <type>Date</type>
</CustomField>