force-app/main/default/objects/OpportunityLineItem/fields/Rental_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Rental_Start_Date__c</fullName>
    <description>Start date of the rental billing period for this line item. Used exclusively for invoicing and revenue recognition. Has no effect on transport trip creation or cost calculation.</description>
    <inlineHelpText>Start date of the rental period for billing purposes. This does not affect transport scheduling. Typically the day after the equipment is delivered on site.</inlineHelpText>
    <label>Rental Start Date</label>
    <type>Date</type>
</CustomField>