force-app/main/default/objects/OpportunityLineItem/fields/Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Start_Date__c</fullName>
    <description>Start date of the service period for this line (rental or services). For Offer Types in Volume_Pricing_Catalog_Names, this drives period-based pricing: the standard UnitPrice on save is Daily_Rate__c × Service_Days__c. For other offers, this remains a billing-only field and has no effect on transport trip creation.</description>
    <inlineHelpText>Service start date. Drives period-based pricing for rental and services Offer Types.</inlineHelpText>
    <label>Service Start Date</label>
    <type>Date</type>
</CustomField>