force-app/main/default/objects/OpportunityLineItem/fields/Trip_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Trip_Delivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Delivery Trip this line item has been assigned to by the trip engine. Populated automatically — never set manually. Allows traceability from a line item back to its transport trip and cost breakdown.</description>
    <inlineHelpText>Automatically populated by the system. Shows the delivery trip this line item belongs to. Read-only — do not edit manually.</inlineHelpText>
    <label>Trip Delivery</label>
    <referenceTo>Trip__c</referenceTo>
    <relationshipLabel>Line Items (Delivery)</relationshipLabel>
    <relationshipName>OLIs_On_Delivery_Trip</relationshipName>
    <type>Lookup</type>
</CustomField>