force-app/main/default/objects/OpportunityLineItem/fields/Trip_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Trip_Pickup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Pickup Trip this line item has been assigned to by the trip engine. Populated automatically — never set manually. Allows traceability from a line item back to its return trip and cost breakdown.</description>
    <inlineHelpText>Automatically populated by the system. Shows the pickup trip this line item belongs to. Read-only — do not edit manually.</inlineHelpText>
    <label>Trip Pickup</label>
    <referenceTo>Trip__c</referenceTo>
    <relationshipLabel>Line Items (Pickup)</relationshipLabel>
    <relationshipName>OLIs_On_Pickup_Trip</relationshipName>
    <type>Lookup</type>
</CustomField>