force-app/main/default/objects/OpportunityLineItem/validationRules/Pickup_Must_Be_After_Or_On_Service_End.validationRule-meta.xml
<ValidationRule>
    <fullName>Pickup_Must_Be_After_Or_On_Service_End</fullName>
    <active>true</active>
    <description>Enforces that Pickup_Date__c cannot precede Service_End_Date__c, ensuring equipment retrieval is only scheduled after the service period has fully elapsed.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Service_End_Date__c)), NOT(ISBLANK(Pickup_Date__c)), Pickup_Date__c &lt; Service_End_Date__c)</errorConditionFormula>
    <errorDisplayField>Pickup_Date__c</errorDisplayField>
    <errorMessage>Pickup Date cannot be before the Service End Date. The equipment must be picked up after the service period ends.</errorMessage>
</ValidationRule>