force-app/main/default/objects/OpportunityLineItem/validationRules/Rental_Start_Must_Be_After_Or_On_Deliver.validationRule-meta.xml
<ValidationRule>
    <fullName>Rental_Start_Must_Be_After_Or_On_Deliver</fullName>
    <active>true</active>
    <description>Enforces that Rental_Start_Date__c cannot precede Delivery_Date__c, ensuring the rental period only begins once the equipment has been physically delivered.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Delivery_Date__c)), NOT(ISBLANK(Rental_Start_Date__c)), Rental_Start_Date__c &lt; Delivery_Date__c)</errorConditionFormula>
    <errorDisplayField>Rental_End_Date__c</errorDisplayField>
    <errorMessage>Rental Start Date cannot be before the Delivery Date. The rental period starts after the equipment is delivered.</errorMessage>
</ValidationRule>