force-app/main/default/objects/OpportunityLineItem/validationRules/Service_End_Must_Be_After_Service_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_End_Must_Be_After_Service_Start</fullName>
    <active>true</active>
    <description>Enforces chronological integrity between Service_Start_Date__c and Service_End_Date__c, ensuring the service period end date is never set before its start date when both dates are provided.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Service_Start_Date__c)), NOT(ISBLANK(Service_End_Date__c)), Service_End_Date__c &lt; Service_Start_Date__c)</errorConditionFormula>
    <errorDisplayField>Service_End_Date__c</errorDisplayField>
    <errorMessage>Service End Date must be on or after Service Start Date.</errorMessage>
</ValidationRule>