force-app/main/default/objects/OpportunityLineItem/validationRules/Service_Start_After_Or_On_Deliver.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Start_After_Or_On_Deliver</fullName>
    <active>true</active>
    <description>Enforces that Service_Start_Date__c cannot precede Delivery_Date__c, ensuring the service period only begins once the equipment has been physically delivered.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Delivery_Date__c)), NOT(ISBLANK(Service_Start_Date__c)), Service_Start_Date__c &lt; Delivery_Date__c)</errorConditionFormula>
    <errorDisplayField>Service_End_Date__c</errorDisplayField>
    <errorMessage>Service Start Date cannot be before the Delivery Date. The service period starts after the equipment is delivered.</errorMessage>
</ValidationRule>